# wootrade-sdk-py

./: README.md  pyproject.toml
examples/: get_all_symbols_price_change_percentage.py  get_exchange_info.py  watch_kline.py
src/woo_sdk/: authentication.py  client.py  exceptions.py  helpers.py  streams.py  threaded_stream.py
src/wootrade_sdk/: client.py  exceptions.py  streams.py
tests/: test_api.py  test_ws.py
