[tool.poetry]
name = "wootrade_sdk"
version = "0.1.1"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "wootrade_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.8.6"
websockets = "^12.0"
pytest = "^7.4.3"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
