[tool.poetry]
name = "wootrade-sdk"
version = "0.1.2"
description = ""
authors = ["Akagi201 <akagi201@gmail.com>"]
readme = "README.md"
packages = [{include = "wootrade_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.1"
websockets = "^12.0"
pytest = "^7.4.4"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
